Improve the styling of the main container Fix an error where the main button will be pushed out of view when error messages are visible

--- a/views/LoginView/LoginView.module.scss
+++ b/views/LoginView/LoginView.module.scss
@@ -1,5 +1,6 @@
 .mainContainer {
-  height: 35rem;
+  min-height: 35rem;
+  min-width: 32rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +25,7 @@
 .loginButton {
   @include button-standard;
   width: max-content;
-  margin-top: 1rem;
+  margin-top: 3rem;
   font-size: 1.3rem;
 }
 
